Adicionados os scripts para fazer a funcionalidade de aceitação de convites completado, e adicionando html para container de grupos e algumas infos colocadas por script. Função click dos elementos que aparecem a partir dos items clickaveis acima funcionando bem, incluindo para grupos

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -43,6 +43,7 @@
         <div class="top-tip"></div>
         <div class="message-list"></div>
       </div>
+      
     </div>
     <div class="top-right-users-wrap col-md-3 col-lg-2">
 	    <div class="usuario-at-wrap">
@@ -63,7 +64,9 @@
       </div>
 	    </div>
     </div>
-    <div class="top-right-groups-wrap col-md-3 col-lg-2"></div>
+    <div class="top-right-groups-wrap col-md-3 col-lg-2">
+	    
+    </div>
   </div>
 </html>
 <div role="main" class="dashboard">
@@ -71,6 +74,11 @@
     <div id="flash" role="alert" class="alert">
       <div class="message"></div>
       <button type="button" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
+    </div>
+    <div class="groups-content-container">
+	      <div class="groups-content-header"></div>
+	      <div class="group-content"></div>
+	      <div class="groups-listing-container"></div>
     </div>
     <div class="left__bar">
       <div class="fixed-top">
