Adicionado funcionalidades para grupos no container dos grupos e membros de grupo completas, sem funcionalidades para membros ao click e sem os estilos completos

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -76,9 +76,17 @@
       <button type="button" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
     </div>
     <div class="groups-content-container">
-	      <div class="groups-content-header"></div>
+	      <div class="groups-content-header">
+		      <div class='groups-in-info-header-wrap'>
+			      <div class="group-icons-wrap"></div>
+			      <div class='see-more-groups-in-h' title="ver todos os grupos">•••</div>
+		      </div>
+		      <div class='curr-group-info-in-h'></div>
+	      </div>
 	      <div class="group-content"></div>
-	      <div class="groups-listing-container"></div>
+	      <div class="groups-listing-container">
+		      <a class="close close-groups-list">&times;</a>
+	      </div>
     </div>
     <div class="left__bar">
       <div class="fixed-top">
