Adicionando click nos markers no mapa que abre div das info criada já no html duro e chamando o nome do usuário do click

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -96,6 +96,7 @@
       <div id="leftContents" class="left-contents collapse"></div>
     </div>
     <div class="map">
+	    <div class="usr-info-in-map-wrap"></div>
       <div id="mapdiv"></div>
       <div id="overmap">
         <div class="icons">
