--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -96,7 +96,10 @@
       <div id="leftContents" class="left-contents collapse"></div>
     </div>
     <div class="map">
-	    <div class="usr-info-in-map-wrap"></div>
+	    <div class="usr-info-in-map-wrap">
+		    <span class='close close-member-marker-label-info'>x</span>
+		    <div class="usr-info-in-map-content"></div>
+	    </div>
       <div id="mapdiv"></div>
       <div id="overmap">
         <div class="icons">
