--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -224,14 +224,18 @@
               <button type="button" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="row">
-              <div id="datepicker" class="calendar"></div>
-              <div class="time-label">
-                <div class="row">
-                  <div class="col-xs-6"><span class="hour-ini">01:00</span></div>
-                  <div class="col-xs-6 text-right"><span class="hour-end">23:59</span></div>
-                </div>
-              </div>
-              <div id="time-slider" class="time-slider"></div>
+	            <div class="col-md-6">
+	              <div id="datepicker" class="calendar"></div>
+	            </div>
+	            <div class="col-md-6">
+	              <div class="time-label">
+	                <div class="row">
+	                  <div class="col-xs-6"><span class="hour-ini">01:00</span></div>
+	                  <div class="col-xs-6 text-right"><span class="hour-end">23:59</span></div>
+	                </div>
+	              </div>
+	              <div id="time-slider" class="time-slider"></div>
+	            </div>
             </div>
           </div>
           <div class="modal-footer">
