--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -247,7 +247,7 @@
   </section>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
+<script src="/scripts/jquery-ui-1.11.3.js"></script>
 <script src="/scripts/jquery.tr.dictionary.js"></script>
 <script src="/scripts/jquery.jscrollpane.js"></script>
 <script src="/scripts/jquery.mousewheel.js"></script>
