--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -213,10 +213,7 @@
       <div role="document" class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button data-dismiss="modal" aria-label="Close" class="close">
-              <div aria-hidden="true" class="span">&times;</div>
-            </button>
-            <h4 id="myModalCalendarLabel" class="modal-title">Selecione uma data</h4>
+            <h4 id="myModalCalendarLabel" class="modal-title">Altere data e horário</h4>
           </div>
           <div class="modal-body">
             <div id="flash-modal" role="alert" class="alert">
@@ -224,10 +221,12 @@
               <button type="button" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="row">
-	            <div class="col-md-6">
+	            <div class="col-md-6" style="border-right: 1px solid #e2e2e2; padding: 0 30px 0 15px;">
+		            <div class="datepicker-title">Selecione a Data</div>
 	              <div id="datepicker" class="calendar"></div>
 	            </div>
 	            <div class="col-md-6">
+		            <div class="time-slider-title">Selecione o periodo</div>
 	              <div class="time-label">
 	                <div class="row">
 	                  <div class="col-xs-6"><span class="hour-ini">01:00</span></div>
@@ -239,6 +238,7 @@
             </div>
           </div>
           <div class="modal-footer">
+	          <button id="cancel" class="cancel-modal btn btn-primary" data-dismiss="modal">Cancelar</button>
             <button id="save" class="btn btn-primary">Salvar</button>
           </div>
         </div>
