Colcando cor de fundo azul e cor de icones brancos nos icones de criação de cerca e calendario

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -109,7 +109,7 @@
             <li class="delete"><a title="Delete" alt="Delete"><span aria-hidden="true" class="glyphicon glyphicon-remove"></span></a></li>
             <li class="save"><a title="Save" alt="Save"><span aria-hidden="true" class="glyphicon glyphicon-ok"></span></a></li>
             <li class="edit"><a title="Edit" alt="Edit"><span aria-hidden="true" class="glyphicon glyphicon-pencil"></span></a></li>
-            <li class="calendar"><a title="Select date interval" alt="Select date interval"><span aria-hidden="true" class="glyphicon glyphicon-calendar"></span></a></li>
+            <li class="calendar"><a title="Select date interval" alt="Select date interval"><span aria-hidden="true" class="glyphicon glyphicon-check-date-icon"></span></a></li>
           </ul>
         </div>
       </div>
