Adicionando biblioteca do RichMarker para arrumar os markers direito. Falta acomodar o fundo do marker, pois a foro já é chamada para cada usuário. Algumas coisas ainda tem que testar

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -258,6 +258,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;libraries=drawing&amp;key=AIzaSyBHIYUva7giKEo0zcgX8x8HFTCWSCW4IgU"></script>
 <script src="/scripts/markerwithlabel.js"></script>
 <script src="/scripts/markerclusterer.js"></script>
+<script src="/scripts/richmarker.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="/scripts/bootstrap-toolkit.js"></script>
 <script src="/scripts/lib.js"></script>
