Re-generando os font-icons do Bootstrappara puxar icones customizados para a parte de forcar posição e cerca virtual. Também fou modificado o css para que a cor de fundo e texto correspondam ao design proposto.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -104,8 +104,8 @@
       <div id="overmap">
         <div class="icons">
           <ul>
-            <li class="force-position"><a title="Force position" alt="Force position"><span aria-hidden="true" class="glyphicon glyphicon-screenshot"></span></a></li>
-            <li class="virtual-fences"><a title="Virtual fences" alt="Virtual fences"><span aria-hidden="true" class="glyphicon glyphicon-record"></span></a></li>
+            <li class="force-position"><a title="Force position" alt="Force position"><span aria-hidden="true" class="glyphicon glyphicon-force-position"></span></a></li>
+            <li class="virtual-fences"><a title="Virtual fences" alt="Virtual fences"><span aria-hidden="true" class="glyphicon glyphicon-virtual-fence"></span></a></li>
             <li class="delete"><a title="Delete" alt="Delete"><span aria-hidden="true" class="glyphicon glyphicon-remove"></span></a></li>
             <li class="save"><a title="Save" alt="Save"><span aria-hidden="true" class="glyphicon glyphicon-ok"></span></a></li>
             <li class="edit"><a title="Edit" alt="Edit"><span aria-hidden="true" class="glyphicon glyphicon-pencil"></span></a></li>
