--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -113,7 +113,7 @@
     </div>
     <div class="map">
 	    <div class="usr-info-in-map-wrap">
-		    <span class='close close-member-marker-label-info'>x</span>
+		    <!-- <span class='close close-member-marker-label-info'>x</span> -->
 		    <div class="usr-info-in-map-content"></div>
 	    </div>
       <div id="mapdiv"></div>
