Adicionando modal para edição de cercas virtuais, com função de listagem de cercas mas que não funciona ainda bem e não da retorno de quando não tem cercas

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -260,6 +260,34 @@
         </div>
       </div>
     </div>
+    <div id="myModalFenceEditing" tabindex="-1" role="dialog" aria-labelledby="myModalFenceEditingLabel" class="modal fade">
+	    <div role="document" class="modal-dialog">
+		    <div class="modal-content">
+			    <div class="modal-header">
+            <h4 id="myModalCalendarLabel" class="modal-title">Edição de Cercas</h4>
+          </div>
+          <div class="modal-body">
+	          <div class="row">
+		          <div class="col-md-12">
+			          <div class="fence-edit-title">Selecione a cerca</div>
+			          <div class="fences-selection-container">
+				          	<select class="form-control fence-select-list">
+					          	<option>  ---  </option>
+					          	<option>Cerca 1</option>
+					          	<option>Cerca 2</option>
+					          	<option>Cerca 3</option>
+				          	</select>
+			          </div>
+			        </div>
+	          </div>
+          </div>
+          <div class="modal-footer">
+	          <button id="cancel" class="cancel-modal btn btn-primary" data-dismiss="modal">Cancelar</button>
+            <button id="draw-fence" class="btn btn-primary">Desenhar Forma</button>
+          </div>
+		    </div>
+	    </div>
+    </div>
   </section>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
