Adicionando click para chamar url e modal de edição de cerca mas sem edição propriamente. Falta conectar os botões do modal cm função que chame editor de cerca no mapa ao selecionar a cercaou o botão (ainda sem adicionar) de criar nova cerca

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -280,10 +280,14 @@
 			          </div>
 			        </div>
 	          </div>
+	          <div class="row" style="padding: 25px; text-align: right;">
+		          <button id="cancel" class="cancel-modal btn btn-primary" data-dismiss="modal">Cancelar</button>
+	            <button id="draw-fence" class="btn btn-primary">Desenhar Forma</button>
+	            <button id="draw-fence" class="btn btn-primary"><i class="glyphicon glyphicon-remove"></i> Apagar cerca </button>
+	          </div>
           </div>
           <div class="modal-footer">
-	          <button id="cancel" class="cancel-modal btn btn-primary" data-dismiss="modal">Cancelar</button>
-            <button id="draw-fence" class="btn btn-primary">Desenhar Forma</button>
+	          <a class="nova-cerca"><i class="glyphicon glyphicon-plus-sign"></i> Nova Cerca </a>
           </div>
 		    </div>
 	    </div>
